--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "autosize": "^5.0.1",
     "formik": "^2.2.9",
+    "framer-motion": "^6.2.8",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
