--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,11 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "graphql": "^15.8.0",
-    "next": "12.0.9",
+    "next": "12.1.4",
     "react": "17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.2",
+    "react-select": "^5.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
