--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "apollo-boost": "^0.4.9",
     "autosize": "^5.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "graphql": "^15.8.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-apollo": "^3.1.5",
     "react-dom": "17.0.2",
     "yup": "^0.32.11"
   },
