--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.6.5",
     "apollo-server-core": "^3.6.5",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8"
