--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
