--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/frontend/node_modules
+node_modules/
+# /frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -11,7 +11,7 @@
 
 # next.js
 /.next/
-/frontend/.next/
+/client/.next/
 /out/
 
 # production
